chore: Update permissions in Test workflow

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master
+permissions:
+  packages: write
+  contents: read
+  id-token: write
+  attestations: write
 
 jobs:
   test_reusable_workflow:
