--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -18,3 +18,6 @@ jobs:
       registry: docker.io
       dockerfile-path: ./Dockerfile
       context: .
+    secrets: 
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
