--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -27,6 +27,14 @@ on:
         type: string
         default: .
       
+    secrets:
+      DOCKER_USERNAME:
+        description: 'Docker Hub username'
+        required: true
+      DOCKER_PASSWORD:
+        description: 'Docker Hub password'
+        required: true
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
