--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -16,9 +16,8 @@ jobs:
     with:
       image-name: tuansondocker1407/test-azure
       registry: docker.io
-      dockerfile-path: ./Dockerfile
+      dockerfile-path: ./Backend/Dockerfile
       context: .
     secrets: 
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      
