--- a/.github/workflows/Sonarcloud2.yml
+++ b/.github/workflows/Sonarcloud2.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          path: ./frontend
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
-        with:
-            projectBaseDir: ./frontend
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
