--- a/.github/workflows/Sonarcloud2.yml
+++ b/.github/workflows/Sonarcloud2.yml
@@ -16,7 +16,7 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
-            projectBaseDir: ./frontend
+            projectBaseDir: ./backend
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
