--- a/.github/workflows/statictest.yml
+++ b/.github/workflows/statictest.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd ${{ inputs.dotnet_project_dir }}
           dotnet tool install -g dotnet-format
-          dotnet format 
+          dotnet format --verify-no-change
 
   sonarcloud:
     name: SonarCloud 
@@ -38,10 +38,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-          path: ./frontend
-      - name: SonarCloud Scan
+      - name: SonarCloud Scan Front end
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: ${{ inputs.react_project_dir }}
+      - name: SonarCloud Scan Back end
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: ${{ inputs.dotnet_project_dir }}
           
