--- a/.github/workflows/statictest.yml
+++ b/.github/workflows/statictest.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd ${{ inputs.dotnet_project_dir }}
           dotnet tool install -g dotnet-format
-          dotnet format --verify-no-change
+          dotnet format --verify-no-changes
 
   sonarcloud:
     name: SonarCloud 
