--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -13,15 +13,25 @@ on:
 jobs:
   react-unit-tests:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        
-      - name: Install Dependencies and Run React Unit Tests
-        run: |
-          cd ${{ inputs.react_project_dir }}
-          npm ci
-          npm test
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: cd ${{ inputs.react_project_dir }}
+    - run: tree
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+
 
   dotnet-unit-tests:
     runs-on: ubuntu-latest
