--- a/.github/workflows/units-test-consumer.yml
+++ b/.github/workflows/units-test-consumer.yml
@@ -10,8 +10,9 @@ on:
       - master
 
 jobs:
+
   unit-test:
     uses: ./.github/workflows/units-test.yml
     with:
-      react_project_dir: $FRONTEND_DIR
-      dotnet_project_dir: $BACKEND_DIR
+      react_project_dir: ./frontend
+      dotnet_project_dir: ./backend
