--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -21,13 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        path: ${{ inputs.react_project_dir }}
+  
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: cd ${{ inputs.react_project_dir }}
     - run: tree
     - run: npm ci
     - run: npm run build --if-present
