chore: Update units-test workflow to use relative paths for project directories

--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -19,17 +19,18 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    defaults:
+      run:
+        working-directory: ${{ inputs.react_project_dir }}
+    
+
     steps:
     - uses: actions/checkout@v4
-    
-    - run: cd ${{ inputs.react_project_dir }}
-  
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
+        cache: 'npm'     
     - run: tree
     - run: npm ci
     - run: npm run build --if-present
