--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'     
+        # cache: 'npm'     
     - run: tree
     - run: npm ci
     - run: npm run build --if-present
