--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -21,7 +21,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ${{ inputs.react_project_dir }}
+        working-directory: ./frontend/
     
 
     steps:
