--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -21,7 +21,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./frontend/
+        working-directory: ./frontend
     
 
     steps:
@@ -30,7 +30,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        # cache: 'npm'     
+        cache: 'npm'   
+        cache-dependency-path: ./frontend/node_modules
+    
     - run: tree
     - run: npm ci
     - run: npm run build --if-present
