--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -22,8 +22,6 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
-    
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -31,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'   
-        cache-dependency-path: ./frontend/node_modules
+        cache-dependency-path: './frontend/package-lock.json'
     
     - run: tree
     - run: npm ci
