chore: Update Docker Build and Push workflow to use a reusable workflow

--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -1,7 +1,4 @@
-
-# This is the workflow for building and pushing a Docker image to Docker Hub.
-
-name: Docker Build and Push
+name: Docker Build and Push Reusable Workflow
 
 on:
   workflow_call:
