--- a/.github/workflows/units-test.yml
+++ b/.github/workflows/units-test.yml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Unit Tests Reusable Workflow
 
 on:
   workflow_call:
@@ -12,12 +12,13 @@ on:
 
 jobs:
   react-unit-tests:
+    continue-on-error: 
+      true
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     defaults:
       run:
@@ -30,8 +31,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'   
         cache-dependency-path: './frontend/package-lock.json'
-    
-    - run: tree
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
