--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "js-cookie": "^3.0.5",
@@ -60,35 +61,35 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@tanstack/react-query-devtools": "^5.8.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/fs-extra": "^11.0.4",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "^6.7.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-yml": "^1.14.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.10",
     "tsx": "^4.17.0",
     "vite-plugin-checker": "^0.6.4",
-    "vite-plugin-compression": "^0.5.1",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0", 
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0", 
-    "eslint": "^8.57.0", 
-    "eslint-config-standard": "^17.1.0", 
-    "eslint-import-resolver-typescript": "^3.6.1", 
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-promise": "^6.1.1", 
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0", 
-    "eslint-plugin-jsx-a11y": "^6.7.0",
-    "eslint-plugin-yml": "^1.14.0",
-    "prettier": "^3.3.2"
+    "vite-plugin-compression": "^0.5.1"
   },
   "imports": {
     "#components/*": "./src/components/*",
